--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,14 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="ghcApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>GitHub Constellations</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+  <ng-include src="'partials/user.html'"></ng-include>
 
   <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
