--- a/app/index-async.html
+++ b/app/index-async.html
@@ -38,7 +38,7 @@
       'js/directives.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['ghcApp']);
+      angular.bootstrap(document, ['constellationsApp']);
     });
   </script>
   <title>My AngularJS App</title>
