--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="ghcApp">
+<html lang="en" ng-app="constellationsApp">
 <head>
   <meta charset="utf-8">
   <title>GitHub Constellations</title>
