--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
+  <script src="lib/d3/d3.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
