--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular-route/angular-route.js"></script>
   <script src="lib/angular-resource/angular-resource.js"></script>
   <script src="lib/d3/d3.js"></script>
   <script src="js/app.js"></script>
